llvm/test/tools/llubi/lib_printf_not_enough_argument.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

declare i32 @printf(ptr, ...)

define i32 @main() {
  %fmt = alloca [18 x i8]
  store [18 x i8] c"Ints: %d, %i, %u\0A\00", ptr %fmt

  call i32 (ptr, ...) @printf(ptr %fmt, i32 42, i32 -42)

  ret i32 0
}
; CHECK: Entering function: main
; CHECK-NEXT:   %fmt = alloca [18 x i8], align 1 => ptr 0x8 [fmt]
; CHECK-NEXT:   store [18 x i8] c"Ints: %d, %i, %u\0A\00", ptr %fmt, align 1
; CHECK-NEXT: Immediate UB detected: Not enough arguments provided for the format string.
; CHECK-NEXT: error: Execution of function 'main' failed.
